Revision history for Coverage::Server

          - Merged CommonLinks and Preferences in PageConfiguration
          - Moved Listener to Server
          - Moved cdnjs to config file
          - Updated skip lists
          - Uses Web::Components
          - Accepts summaries serves badges

0.1.1     2015-06-10 12:27:48
          - Added project files to master branch
